--- a/app/views/apportal/index.html.haml
+++ b/app/views/apportal/index.html.haml
@@ -9,77 +9,66 @@
 .strata-small
   .row.p-top-10
     .small-12.columns
-      %h3.c-blue Marketing and Sales Apportals!  
+      %h3.c-orange WINDOWS 8.1 ENTERPRISE APPLICATIONS  
   .row
-    .small-12.large-9.columns
-      %p.p-top-5 Apportals are about disseminating information in a highly targeted way by role. They are about grouping modern Windows 8 applications, enterprise applications, key performance indicators with quick access to business intelligence reporting, and pinned links on the desktop with the ease of the kiosk’s touch interface.  Apportals are for marketing and sales executives that want to innovate and add mobile and cloud-first applications to their toolkit.
+    .small-we.large-9.columns
+      %h5.c-blue What is a Windows 8 Application?
   .row
-    .small-12.large-9.columns
-      %h6.c-drk-gray.p-top-10 Why is an Apportal a game-changer for Marketing and Sales Executives?
+    .small-12.large-6.columns
+      %p.p-top-5 A Windows 8 application is a customizable enterprise App that can integrate your company’s entire Line of Business (LOB) stack, social media, news, and business intelligence into a single, modern, touch-based experience for employees, channel partners, and/or customers.  The concept behind a Windows Enterprise App is simple—provide a single view of the heterogeneous Apps that exist in an organization today in an “single pane of glass” experience. In today’s diverse organization environments, it is not realistic or desirable to build a single, monolithic application.
+    .small-12.large-6.columns
+      = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/update/windows8.1.jpg', style: "max-height: 260px;")
+      = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/update/windows8.1laptop.png', style: "max-height: 260px;")
+  .row
+    .small-12.large-12.columns
+      %p.p-top-5 
+        Instead, organizations can use the flexibility of the Windows 8.1 OS to create a UI-based virtual integration.
+        %span.c-orange With the help of a partner like Bloom, business users can initiate a new way to experience information in the enterprise that is extremely simple, intuitive and designed specifically for the modern UI. 
+        And, because the App can deliver customized content based on the user’s role in the organization using Active Directory, the experience is all the better.
+  .row
+    .small-12.large-4.columns
+      %h6.c-blue.p-top-10 Bloom was selected to partner with Microsoft to deliver the concept behind the “Patrol Car of the Future” with touch and voice activated tiles consolidating disparate data from across various police information sources.  We’re about to change the world! Join us!
+    .small-12.large-8.columns
+      = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/update/patrolcaroffuture.jpg', style: "max-height: 460px;")
   .row.p-top-10
-    .small-12.columns
-      %h6.c-blue.p-top-10 Sales
-  .row
-    .small-12.large-9.columns
-      %p.p-top-10.c-orange Sales Executives need… 
-      %p.p-top-5 Access to pipeline, revenue data and internal applications quickly and in a summary view.  
-      %p.p-top-10.c-orange Account Managers need…
-      %p.p-top-5 Access to pipeline, revenue data, and internal applications quickly for their portfolio of customers.
-      %p.p-top-10 Today, sales roles must open individual apps one by one, filter on data, and calculate key performance indicators manually to get what they need. Tomorrow, Bloom can provide your organization a customized Sales Apportal that is unique for the Sales Executive and the Sales Account Manager. Using Active Directory, each user will experience a customized view of their desktop with tiles delivering what they need with the touch of the screen.
-      %p.p-top-10 In the example below, this Sales Apportal solution was designed to display pipeline KPIs, attainment KPIs, pipeline hygiene and seller applications from the desktop or a mobile environment.
-  .strata-small
-    .row.p-20
-      .small-12.medium-2.columns
-      = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/image2-10.png', style: "max-width: 720px;")
-  .row.p-top-10
-    .small-12.columns
-      %h6.c-blue.p-top-10 Marketing
-  .row
-    .small-12.large-9.columns
-      %p.p-top-10.c-orange Marketing Executives need… 
-      %p.p-top-5 Access to campaign performance metrics, including costs, leads generated and converted to sales opportunities, revenue, and ROI quickly and in a summary view.  
-      %p.p-top-10.c-orange Marketing Managers need…
-      %p.p-top-5 Access to campaign performance metrics , including costs, leads generated and converted to sales opportunities, revenue, and ROI, plus marketing resources and tools that they use every day quickly and easily.
-      %p.p-top-10.c-orange Tradeshow Managers need…
-      %p.p-top-5 To display customize and interactive tiles on the desktop to excite show attendees at the booth. Today, they use powerpoint presentations and videos. Tomorrow, Bloom can provide your organization with a customized, interactive, touch screen enabled set of tiles with links to giveaways forms, applications, live, streaming videos, demos of your products. This customized view can be experienced on TV—size touch screens, tablets, or mobile devices.
-      %p.p-top-10.c-orange Internal Communication Managers need…
-      %p.p-top-5 To disseminate company news to employees around the world.  Today, many communication specialists deliver their communication via a static, HTML-based email to employee inboxes. Tomorrow, Bloom can provide your organization a customized Marketing or Internal Communication Apportal that is unique for every employee based on their role function in the organization. Using Active Directory, each user will experience a customized view of their desktop with tiles delivering what they need to know with the touch of the screen.
-  .row
-    .small-12.large-6.columns.bgc-lghter-gray
-      %h6.c-drk-gray.p-top-10 Unlocking the power of role-based Apportal access
-  .row
-    .small-12.large-6.columns.bgc-lghter-gray
-      %p.p-top-10 Unlock the power of the cloud with Enterprise-level Identity Services. Enable users to work from virtually any location using any device. Give them always-on access to all their work resources using a single set of credentials protected with multi-factor authentication. After a user has signed in, they get a single sign-on access to their apps and data directly in their Apportal. Clients can also use Microsoft Azure Active Directory at a global scale to centrally manage employees’ access and provide single sign-on to Microsoft services such as Microsoft Azure, Microsoft O365, Microsoft Dynamics CRM, Windows Intune, and thousands of non-Microsoft cloud applications.
-    .small-12.large-3.columns
-      = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/image3-12.png', style: "max-height: 130px;")
-    .small-12.large-3.columns
-  .row
-    .small-12.large-9.columns
-      %h3.c-blue Apportals are for any industry, any enterprise function, and for any role!
-  .row
-    .small-12.large-9.columns
-      %p.p-top-10.c-orange Healthcare providers need...
-      %p.p-top-10  To provide customized views of patient data, inventory, systems, websites to their doctors, nurses, and administrators.
-  .row
-    .small-12.large-9.columns
-      %p.p-top-10.c-orange Security professionals need...
-      %p.p-top-10  To disseminate customized, geo-based threat advisories to field-based security consultants.
-  .row
-    .small-12.large-9.columns
-      %p.p-top-10.c-orange Security solution providers...
-      %p.p-top-10  To deliver security data to their clients through a desktop application versus a website or excel-based solution.
-  .row
-    .small-12.large-9.columns
-      %p.p-top-10.c-orange Organizations with mobile workers need...
-      %p.p-top-10 To push customized views to their workers, focusing them on the key information and resources that make them  more productive. HQ executives can also view a roll up of information by geo on their desktop with the touch of the screen.
-  .row
-    .small-12.large-9.columns
-      %p.p-top-10 The practical, but innovative applications of an Apportal are only limited by our imagination.
-  .strata-small
-    .row.p-20
-      .small-12.medium-2.columns
-      = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/image5-16.png', style: "max-width: 720px;")
-  .strata-small
-    .row.p-20
-      .small-12.medium-2.columns
-      = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/image4-14.png', style: "max-width: 720px;")
+    .small-12.large-12.columns
+      %h5.c-blue.p-top-10 Why is a Windows 8 enterprise App a game changer?
+  .row.p-top-40
+    .small-12.large-4.columns
+      %p.p-top-10.c-orange 1. It’s all about Experience! 
+      %p.p-top-5 Information is delivered seamlessly across Windows-based PC, mobile, and Hub devices in a simple, intuitive design for the Modern UI lover.
+    .small-12.large-4.columns
+      = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/update/windowslineup.jpg', style: "max-height: 260px;")
+    .small-12.large-4.columns
+      .row
+        .small-12.columns
+          = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/update/surface.jpg', style: "max-height: 260px;")
+      .row
+        .small-12.columns
+          = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/update/scrollingcontent.jpg', style: "max-height: 260px;")
+  .row.p-top-40
+    .small-12.large-4.columns
+      %p.p-top-10.c-orange 2. It’s all about Experience!
+      %p.p-top-5 Content can be delivered based on role using Active Directory, creating a custom user experience.
+    .small-12.large-8.columns
+      = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/update/multiuser.jpg', style: "max-height: 460px;")
+  .row.p-top-40
+    .small-12.large-4.columns
+      %p.p-top-10.c-orange 3. It’s all about Experience!
+      %p.p-top-10 All employee apps, tools, data sources, reports, and metrics can be consolidated into one view for a more productive experience.
+    .small-12.large-8.columns
+      = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/update/gebeakers.jpg', style: "max-height: 460px;")
+  .row.p-top-40
+    .small-12.large-4.columns
+      %p.p-top-10.c-orange 4. It’s all about Experience!
+      %p.p-top-10 Data from 15, 20, or as many as 30 data sources can be surfaced in one simple view launched right from the Start Screen.
+    .small-12.large-8.columns
+      = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/update/security.jpg', style: "max-height: 460px;")
+  .row.p-top-40
+    .small-12.large-4.columns 
+      %p.p-top-10.c-orange 5. It’s all about Experience!
+      %p.p-top-10 The modern UI is about simple, intuitive design for touch and voice activation.
+    .small-12.large-4.columns
+      = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/update/portfolio.jpg', style: "max-height: 460px;")
+    .small-12.large-4.columns
+      = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/update/cortana.jpg', style: "max-height: 460px;")
