--- a/app/views/mains/_practice_areas.haml
+++ b/app/views/mains/_practice_areas.haml
@@ -3,7 +3,19 @@
     .small-12.columns
       %h2.c-blue.ta-center Practice Areas
   .row.m-top-20{"data-equalizer" => "true"}
-    .small-12.medium-4.columns
+    .small-12.medium-3.columns
+      = link_to practiceareas_path(anchor: "ap"), class: "anchor-link" do
+        %div.b-light-gray{"data-equalizer-watch" => "true"}
+          - image = @main.practice_area_4_image_url(:thumb)
+          .practice-area-one{style: "background-image: url(#{image});"}
+            .blue-overlay
+          %div.p-20.ta-center
+            %h5.c-drk-gray.main-title= @main.practice_area_4_title
+            %p.p-x-15= @main.practice_area_4_copy
+            %span.bottom-line
+              %h4
+                %span.c-orange{"data-icon" => "p"}
+    .small-12.medium-3.columns
       = link_to practiceareas_path(anchor: "pm"), class: "anchor-link" do
         %div.b-light-gray{"data-equalizer-watch" => "true"}
           - image = @main.practice_area_1_image_url(:thumb)
@@ -15,7 +27,7 @@
             %span.bottom-line
               %h4
                 %span.c-orange{"data-icon" => "p"}
-    .small-12.medium-4.columns
+    .small-12.medium-3.columns
       = link_to practiceareas_path(anchor: "mc"), class: "anchor-link" do
         %div.b-light-gray{"data-equalizer-watch" => "true"}
           - image = @main.practice_area_2_image_url(:thumb)
@@ -27,7 +39,7 @@
             %span.bottom-line
               %h4
                 %span.c-orange{"data-icon" => "p"}
-    .small-12.medium-4.columns
+    .small-12.medium-3.columns
       = link_to practiceareas_path(anchor: "bi"), class: "anchor-link" do
         %div.b-light-gray{"data-equalizer-watch" => "true"}
           - image = @main.practice_area_3_image_url(:thumb)
