removed old logic for homepage

--- a/app/views/pages/home.haml
+++ b/app/views/pages/home.haml
@@ -8,8 +8,8 @@
         %h2.intro-arrow-box
           %a.intro-arrow.page-jump{"data-icon" => "f"}
 
-= render 'mains/top_announcement'
+= render 'top_announcement'
 = render 'practice_areas'
-= render 'mains/meet_the_team'
-= render 'mains/hiring_announcement'
-= render 'mains/quotes'
+= render 'meet_the_team'
+= render 'hiring_announcement'
+= render 'quotes'
