updated admin pages for no PAs in homepage

--- a/app/views/admin/dashboard/index.html.haml
+++ b/app/views/admin/dashboard/index.html.haml
@@ -6,7 +6,7 @@
     .small-12.medium-8.columns
       %ul.small-block-grid-1.medium-block-grid-2.large-block-grid-3
         %li
-          = link_to edit_admin_main_path(1) do
+          = link_to admin_pages_home_path do
             .admin-item
               %span.admin-icon{"data-icon" => "B"}
               %h6.m-top-30 Homepage
