--- a/app/views/admin/practiceareas/edit.haml
+++ b/app/views/admin/practiceareas/edit.haml
@@ -57,8 +57,8 @@
             = f.label :pa1_title, "Practice Area Name"
             = f.text_field :pa1_title
           .field
-            = f.label :hero_image, "Practice Area 1 Home Image"
-            .b-lighter-gray= image_tag @practicearea.hero_image.to_s
+            = f.label :pa1_image, "Practice Area 1 Home Image"
+            .b-lighter-gray= image_tag @practicearea.pa1_image.to_s
             .p-x-20.p-y-80.bgc-lghter-gray
               %p.ta-center#hero-image-print
               %button.file-upload.btn.btn-l.btn-empty.btn-block.ta-center
@@ -66,7 +66,7 @@
                 = f.file_field :pa1_image, class: "upload", "data-print" => "#pa1-image-print"
           .field
             = f.label :pa1_home_copy, "Practice Area 1 Home Copy"
-            = f.text_field :pa1_home_copy
+            = f.text_area :pa1_home_copy, :rows => "4"
           .field.m-top-20
             = f.label :pa1_copy, "Blurb"
             = f.text_area :pa1_copy, :class => "tinymce", :id => "editor", :rows => 20, :cols => 80
@@ -107,8 +107,8 @@
             = f.label :pa2_title, "Practice Area Name"
             = f.text_field :pa2_title
           .field
-            = f.label :hero_image, "Practice Area 2 Home Image"
-            .b-lighter-gray= image_tag @practicearea.hero_image.to_s
+            = f.label :pa2_image, "Practice Area 2 Home Image"
+            .b-lighter-gray= image_tag @practicearea.pa2_image.to_s
             .p-x-20.p-y-80.bgc-lghter-gray
               %p.ta-center#hero-image-print
               %button.file-upload.btn.btn-l.btn-empty.btn-block.ta-center
@@ -116,7 +116,7 @@
                 = f.file_field :pa2_image, class: "upload", "data-print" => "#pa1-image-print"
           .field
             = f.label :pa2_home_copy, "Practice Area 2 Home Copy"
-            = f.text_field :pa2_home_copy
+            = f.text_area :pa2_home_copy, :rows => "4"
           .field.m-top-20
             = f.label :pa2_copy, "Blurb"
             = f.text_area :pa2_copy, :class => "tinymce", :id => "editor2", :rows => 20, :cols => 80
@@ -151,8 +151,8 @@
             = f.label :pa3_title, "Practice Area Name"
             = f.text_field :pa3_title
           .field
-            = f.label :hero_image, "Practice Area 3 Home Image"
-            .b-lighter-gray= image_tag @practicearea.hero_image.to_s
+            = f.label :pa3_image, "Practice Area 3 Home Image"
+            .b-lighter-gray= image_tag @practicearea.pa3_image.to_s
             .p-x-20.p-y-80.bgc-lghter-gray
               %p.ta-center#hero-image-print
               %button.file-upload.btn.btn-l.btn-empty.btn-block.ta-center
@@ -160,7 +160,7 @@
                 = f.file_field :pa3_image, class: "upload", "data-print" => "#pa1-image-print"
           .field
             = f.label :pa3_home_copy, "Practice Area 3 Home Copy"
-            = f.text_field :pa3_home_copy
+            = f.text_area :pa3_home_copy, :rows => "4"
           .field.m-top-20
             = f.label :pa3_copy, "Blurb"
             = f.text_area :pa3_copy, :class => "tinymce", :id => "editor3", :rows => 30, :cols => 80
@@ -183,8 +183,8 @@
             = f.label :pa4_title, "Practice Area Name"
             = f.text_field :pa4_title
           .field
-            = f.label :hero_image, "Practice Area 4 Home Image"
-            .b-lighter-gray= image_tag @practicearea.hero_image.to_s
+            = f.label :pa4_image, "Practice Area 4 Home Image"
+            .b-lighter-gray= image_tag @practicearea.pa4_image.to_s
             .p-x-20.p-y-80.bgc-lghter-gray
               %p.ta-center#hero-image-print
               %button.file-upload.btn.btn-l.btn-empty.btn-block.ta-center
@@ -192,7 +192,7 @@
                 = f.file_field :pa4_image, class: "upload", "data-print" => "#pa1-image-print"
           .field
             = f.label :pa4_home_copy, "Practice Area 4 Home Copy"
-            = f.text_field :pa4_home_copy
+            = f.text_area :pa4_home_copy, :rows => "4"
           .field.m-top-20
             = f.label :pa4_copy, "Blurb"
             = f.text_area :pa4_copy, :class => "tinymce", :id => "editor3", :rows => 30, :cols => 80
