fixed static image

--- a/app/views/mains/_practice_areas.haml
+++ b/app/views/mains/_practice_areas.haml
@@ -6,7 +6,7 @@
     .small-12.medium-3.columns
       = link_to practiceareas_path(anchor: "ap"), class: "anchor-link" do
         %div.b-light-gray{"data-equalizer-watch" => "true"}
-          - image = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/update/windows8.1laptop.png')
+          - image = 'https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/update/windows8.1laptop.png'
           .practice-area-one{style: "background-image: url(#{image});"}
             .blue-overlay
           %div.p-20.ta-center
