updates for cleaning up old logic

--- a/app/views/practiceareas/show.haml
+++ b/app/views/practiceareas/show.haml
@@ -18,7 +18,7 @@
   .row
     .small-12.medium-9.columns
       %h6.target-jump.d-inline-block.p-left-5.m-bottom-0.lh-btn-m{"data-target" => "ap"}
-        %a Apportal
+        %a= @practicearea.pa4_title
       %h6.d-inline-block.p-left-5.c-lght-gray.lh-btn-m.m-bottom-0 &#124;
       %h6.target-jump.d-inline-block.p-left-5.m-bottom-0.lh-btn-m{"data-target" => "pm"}
         %a= @practicearea.pa1_title
