updated for another announcement

--- a/app/views/mains/_top_announcement.haml
+++ b/app/views/mains/_top_announcement.haml
@@ -1,4 +1,4 @@
-.strata.bgc-lghter-gray.jump-anchor
+.strata.jump-anchor
   .row
     .small-12.medium-3.columns
       %div.ta-center
@@ -9,4 +9,16 @@
       %h5
         = link_to @main.stratum_1_link do
           = @main.stratum_1_cta
+          %span.h5-icon{ "data-icon" => "p"}
+.strata.bgc-lghter-gray.jump-anchor
+  .row
+    .small-12.medium-3.columns
+      %div.ta-center
+        = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/update/windows8.1laptop.png', style: "max-height: 130px;")
+    .small-12.medium-9.columns
+      %h4.c-drk-gray New White Paper Available
+      %p.c-drk-gray.p-top-10 Bloom publishes first-of-its-kind White Paper on key considerations for taking a Windows Applications Cross Platform.
+      %h5
+        %a{ :href => "/apportal" }
+          Learn More
           %span.h5-icon{ "data-icon" => "p"}
