--- a/app/views/apportal/index.html.haml
+++ b/app/views/apportal/index.html.haml
@@ -72,3 +72,8 @@
       = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/update/portfolio.jpg', style: "max-height: 460px;")
     .small-12.large-4.columns
       = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/Apportal/update/cortana.jpg', style: "max-height: 460px;")
+  .row
+    .small-12.large-6.columns
+      %a{ :href => "https://s3-us-west-2.amazonaws.com/bcg-site-assets/Bloom+WhitePaper_Cross-Platform+Consideration+for+Windows+Apportals_April+13.pdf", :target => "_blank" }
+        %h5.c-orange Download the New White Paper
+        = image_tag('https://s3-us-west-2.amazonaws.com/bcg-site-assets/whitepaper.png')
