--- a/app/views/layouts/_blog_nav.haml
+++ b/app/views/layouts/_blog_nav.haml
@@ -7,7 +7,7 @@
       %h5.d-inline-block{style: "line-height: 60px;"}
         %span.m-left-5.c-lght-gray /
       %h5.d-inline-block{style: "line-height: 60px;"}
-        = link_to "Blog", posts_url
+        = link_to "News", posts_url
     .small-4.columns
       - contact = Contact.all
       %ul.f-right.l-no-style
