--- a/app/views/mains/_practice_areas.haml
+++ b/app/views/mains/_practice_areas.haml
@@ -35,7 +35,7 @@
             .blue-overlay
           %div.p-20.ta-center
             %h5.c-drk-gray.main-title= @main.practice_area_2_title
-            %p.py-15= @main.practice_area_2_copy
+            %p.p-x-15= @main.practice_area_2_copy
             %span.bottom-line
               %h4
                 %span.c-orange{"data-icon" => "p"}
@@ -47,7 +47,7 @@
             .blue-overlay
           %div.p-20.ta-center
             %h5.c-drk-gray.main-title= @main.practice_area_3_title
-            %p.py-15= @main.practice_area_3_copy
+            %p.p-x-15= @main.practice_area_3_copy
             %span.bottom-line
               %h4
                 %span.c-orange{"data-icon" => "p"}
