--- a/app/views/practiceareas/show.haml
+++ b/app/views/practiceareas/show.haml
@@ -16,7 +16,7 @@
       Back To Top
 .strata-small.bgc-lghter-gray.b-bottom-light-gray.w-100.p-relative{"data-magellan-expedition" => "fixed"}
   .row
-    .small-12.medium-9.columns
+    .small-12.medium-12.columns
       %h6.target-jump.d-inline-block.p-left-5.m-bottom-0.lh-btn-m{"data-target" => "ap"}
         %a Windows Application Development
       %h6.d-inline-block.p-left-5.c-lght-gray.lh-btn-m.m-bottom-0 &#124;
@@ -28,10 +28,6 @@
       %h6.d-inline-block.p-left-5.c-lght-gray.lh-btn-m.m-bottom-0 &#124;
       %h6.target-jump.d-inline-block.p-left-5.m-bottom-0.lh-btn-m{"data-target" => "bi"}
         %a= @practicearea.pa3_title
-    .small-12.medium-3.columns
-      = link_to contact_path, class: "btn btn-empty btn-m btn-block" do
-        %span.btn-text Contact Us
-        %span.btn-text.f-right{"data-icon" => "p"}
 #ap.clear-nav-anchor    
 .strata-small
   .row.p-top-10
@@ -49,8 +45,7 @@
   .row
     .small-12.large-12.columns
       %p.p-top-5 
-        Instead, organizations can use the flexibility of the Windows 8.1 OS to create a UI-based virtual integration.
-        %span.c-orange With the help of a partner like Bloom, business users can initiate a new way to experience information in the enterprise that is extremely simple, intuitive and designed specifically for the modern UI. 
+        Instead, organizations can use the flexibility of the Windows 8.1 OS to create a UI-based virtual integration. With the help of a partner like Bloom, business users can initiate a new way to experience information in the enterprise that is extremely simple, intuitive and designed specifically for the modern UI. 
         And, because the App can deliver customized content based on the user’s role in the organization using Active Directory, the experience is all the better.
   .row
     .small-12.large-4.columns
